Page placée en mode "En construction"

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Mon portfolio</title>
 </head>
 <body>
-	<h2>Ceci est un test avant utilisation</h2>
+	<h2>En construction...</h2>
 </body>
 </html>
